# nano

./: .gitignore  BUILD.md  CMakeLists.txt  LEGACY_DEPRECATION.md  Makefile  Makefile_new  README.md  README_ARCHITECTURE.md  analyze.md  build.sh  current_dependencies.txt  current_functions.txt  direct_phase4_test.c  mcp_server  migration_plan.md  migration_status.sh  nano  newtree.md  package-lock.json  package.json  phase4_validation_test.c  plan.md  prepare.sh  report.md  requirements.md  run_phase4_tests.sh  server  settings.json  simple_phase4_test.c  test  test-comprehensive.js  test.js  test_all_new.sh  test_c23  test_error_mapping.json  test_http_buffer.js  test_image_processing.js  test_memory_tracker.json  test_phase3_http.cjs  test_phase4.c  (+8 more)
backup/: CMakeLists.txt  Makefile  package.json
config/: models.json
docs/: DESIGN.md  IDEA.md  INSTRUCTIONS.md  LLVM_ANALYSIS_GUIDE.md  LORA_AND_LOGITS_GUIDE.md  MCP_TRANSPORT_CONSISTENCY.md  PLAN.md  PRD.md  PROMPT.md  STREAMING_DESIGN.md
docs/issues/: 20250723_21-15_fake-implementations.md  rknn_multimodal_support.md
docs/notes/: 2025-07-23-19-30-breakthrough-model-working.md  2025-07-23-20-00-comprehensive-test-results.md  2025-07-23-20-30-perfect-test-success.md  2025-07-23-21-00-real-issues-found.md  2025-07-23_15-08_working_inference_server.md  2025-07-23_17-15_rkllm_behavior_analysis.md  2025-07-23_17-20_server_behavior_verification.md  2025-07-23_17-25_async_crash_analysis.md  2025-07-23_17-50_direct_rkllm_async_test.md  2025-07-23_17-55_async_test_results.md  2025-07-23_18-10_implementing_missing_rkllm_functions.md  2025-07-23_18-30_implementation_completed.md  2025-07-23_18-45_creating_nodejs_test_suite.md  2025-07-23_19-00_test_suite_completed.md  20250123-141500-json-rpc-working.md  20250123-141700-socket-cleanup-complete.md  20250123-142000-implementing-rkllm-init.md  20250123-142400-rkllm-init-successful.md  20250123-143000-github-issue-rkllm-run-async-broken.md  20250123-182645-implementation-start.md  20250123-184954-basic-server-working.md  20250123-195330-implementation-progress.md  20250123_15-30_qwenvl_image_processing_findings.md  20250723-143500-comprehensive-status-notes.md  20250723-144000-debugging-memory-issue.md  20250723-144600-critical-rkllm-init-issue.md  20250723-145000-rkllm-working-isolated.md  20250723-150100-final-implementation-plan.md  20250723_21-30_fake-implementations-fixed.md  20250723_22-00_todos-updated-final-status.md  20250723_23-30_comprehensive-server-hardening-plan.md  20250723_23-45_server-hardening-final-status.md  20250723_23-55_lora-and-logits-usage-guide.md  20250724_12-30_rknn-implementation-phase1-complete.md  20250724_15-00_json-parameter-adapter-implemented.md  20250724_16-00_rknn-missing-implementations-analysis.md  20250724_17-00_rknn-missing-implementations-comprehensive-analysis.md  20250724_rknn-integration-complete.md
docs/plan/: debt-elimination-complete.md  debts.md  implementation_plan_complete_rknn_api.md  implementation_plan_rknn.md
plans/: fix_rkllm_init_blocking.md  fix_rkllm_proxy.md  fix_specification_discrepancies.md
reports/: exhaustive_test_analysis.md  production_issues_analysis.md
sandbox/: README.md  complete_json_streaming_test.js  comprehensive_lora_logits_test.js  comprehensive_test.js  concurrent_proper_test.js  concurrent_server_test.js  correct_multimodal_test.js  corrected_final_test.js  debug_init_only.js  debug_minimal_multimodal.js  debug_multimodal_small.js  debug_outputs.js  debug_params.js  debug_responses.js  debug_rkllm_text.js  debug_rknn_only.js  debug_rknn_outputs.js  debug_simple.js  demo_text_only_test.js  diagnostic_test.js  final_test.js  final_working_demo_test.js  fixed_demo_test.js  focused_streaming_test.js  lora_diagnostic.js  quick_test.js  qwen2vl_multimodal_test.js  qwenvl_multimodal_example.js  realtime_streaming_demo.js  show_raw_json_chunks.js  simple_connection_test.js  simple_final_test.js  simple_image_test.js  simple_test.js  simple_working_multimodal.js  test_lora_and_logits.js  test_multimodal_streaming.js  test_qwenvl_image_processing.js  test_qwenvl_with_explanation.js  test_rknn_init.js  (+5 more)
sandbox/test_results/: error_log.txt
scripts/: analyze.sh  build.sh  check_npu.sh  dev-server.sh  dev.sh  graceful-shutdown.sh  install-service.sh  nano-server.service  pid-manager.sh  service-manager.sh  uninstall-service.sh  update_service.sh  watch-server.sh
src/: main.c  main_old.c
src/common/: c23_utils.h  common.h  constants.h  core.h  types.h
src/io/: Makefile  handle_pool.c  handle_pool.h  io.c  io.h  model_version.c  model_version.h  operations.c  operations.h  queue.c  queue.h  system_info.c  system_info.h  worker_pool.c  worker_pool.h
src/server/: operations.c  operations.h  server.c  server.h
src/utils/: base64_decode.c  base64_decode.h  image_enc.c
src_new/common/: common.h
test_client/: README.md  nodejs_streaming_client.js
tests/: README.md  advanced-rkllm-functions.test.js  client.js  comprehensive-test-suite.js  debug-streaming.js  debug-test.js  package-lock.json  package.json  performance-benchmark.test.js  port_check.js  run_all_tests.sh  server-robustness.test.js  stdio_test.js  test-fixed-output.js  test-real-implementations.js  test-real-streaming.js  test-runner-simple.js  test-runner.js  test.c  test_dynamic_api.c  test_dynamic_api_standalone.c  test_e2e_workflow.c  test_io_callbacks.c  test_legacy_deprecation.c  test_main.c  test_mcp_compliance.c  test_nano_callbacks.c  test_streaming.c  test_streaming_client.c  test_unified.c  transport_test.js
tests/advanced/: test-all-advanced.js  test-async-operations.js
tests/common/: Makefile  test_json_utils.c  test_json_utils.h
tests/core/: test-all-core.js  test-createDefaultParam.js  test-init.js
tests/edge-cases/: test-error-scenarios.js
tests/integration/: test-complete-workflow.js  test-real-model-complete.js  test_http_polling.js  test_lora.h  test_qwenvl.h  test_transport_connections.js  (+1 more)
tmp/: IDEA.md  PRD.md  lead.md  prompt.md
tools/: complete_analysis.sh  rkllm_parser.sh  simple_analysis.sh
(+453 files in other folders)
